# mixme

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
mixer/: __init__.py  client.py  discovery.py  pipewire.py
ui/: app.py  connect.py  eq.py  eq_math.py  strip.py  utils.py
